--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,9 +1,12 @@
-<header class="bg-blue-900 text-white p-4">
+<header class="bg-custom-blue text-white p-4">
   <nav class="container mx-auto flex justify-between items-center">
-    <strong class="text-lg">Punto Safa</strong>
-    <ul class="flex space-x-6">
+    <div class="flex items-center space-x-2">
+      <img src="/assets/logo_puntosafa.png" alt="Logo Punto Safa" class="h-16">
+      <strong class="text-2xl">Punto Safa</strong>
+    </div>
+    <ul class="flex space-x-16 text-lg">
       <li><a href="#" class="hover:text-gray-300">Inicio</a></li>
-      <li><a href="#" class="hover:text-gray-300">Tienda</a></li>
+      <li><a href="#" class="hover:text-gray-300">Catálogo</a></li>
       <li>
         <a href="#" class="bg-white text-blue-900 px-4 py-2 rounded hover:bg-gray-200">
           Iniciar sesión o registrarse
@@ -12,4 +15,3 @@
     </ul>
   </nav>
 </header>
-
