--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,6 @@
 @tailwind components;
 @tailwind  utilities;
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif;
+body { margin: 2%; font-family: Monserrat, "Helvetica Neue", sans-serif;
   @apply min-h-screen;
 }
