--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,13 +1,30 @@
-<footer class="bg-blue-900 text-white py-4">
-  <div class="container mx-auto text-center space-y-2">
-    <p>
-      <a href="#" class="hover:text-gray-300">Sobre nosotros</a> •
-      <a href="#" class="hover:text-gray-300">Contacto</a>
-    </p>
-    <p>
-      Síguenos en redes sociales:
-      <a href="#" class="hover:text-gray-300">Facebook</a> •
-      <a href="#" class="hover:text-gray-300">Twitter</a>
-    </p>
+<footer class="bg-gray-800 text-white py-8">
+  <div class="container mx-auto flex justify-between items-center">
+    <div>
+      <ul>
+        <li><a href="#" class="hover:underline">Sobre nosotros</a></li>
+        <li><a href="#" class="hover:underline">Contacto</a></li>
+        <li><a href="#" class="hover:underline">Aviso legal</a></li>
+        <li><a href="#" class="hover:underline">Políticas de privacidad</a></li>
+        <li><a href="#" class="hover:underline">Términos de uso</a></li>
+      </ul>
+    </div>
+    <div>
+      <p>Suscríbete a nuestro boletín:</p>
+      <form class="mt-2">
+        <input type="text" placeholder="Tu nombre" class="p-2 rounded-md text-black">
+        <input type="email" placeholder="Tu correo" class="p-2 rounded-md text-black ml-2">
+        <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded ml-2">Suscribirse</button>
+      </form>
+    </div>
+    <div>
+      <p>Síguenos en nuestras redes:</p>
+      <div class="flex space-x-4 mt-2">
+        <a href="#" class="hover:text-gray-400"><i class="ion-logo-instagram"></i></a>
+        <a href="#" class="hover:text-gray-400"><i class="ion-logo-facebook"></i></a>
+        <a href="#" class="hover:text-gray-400"><i class="ion-logo-twitter"></i></a>
+        <a href="#" class="hover:text-gray-400"><i class="ion-logo-youtube"></i></a>
+      </div>
+    </div>
   </div>
 </footer>
