--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -4,9 +4,9 @@
       <img src="/assets/logo_puntosafa.png" alt="Logo Punto Safa" class="h-16">
       <strong class="text-2xl">Punto Safa</strong>
     </div>
-    <ul class="flex space-x-16 text-lg">
-      <li><a href="#" class="hover:text-gray-300">Inicio</a></li>
-      <li><a href="#" class="hover:text-gray-300">Catálogo</a></li>
+    <ul class="flex space-x-16 text-white-lg">
+      <li><a href="#" class=" text-white hover:text-gray-300">Inicio</a></li>
+      <li><a href="#" class=" text-white hover:text-gray-300">Catálogo</a></li>
       <li>
         <a href="#" class="bg-white text-blue-900 px-4 py-2 rounded hover:bg-gray-200">
           Iniciar sesión o registrarse
