--- a/src/app/component/hero-section-inicio/hero-section-inicio.component.html
+++ b/src/app/component/hero-section-inicio/hero-section-inicio.component.html
@@ -1,3 +1,22 @@
-<p>
-  hero-section-inicio works!
-</p>
+<section class="bg-blue-100 py-2 md:py-4">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+
+  <div class="container mx-auto flex flex-col md:flex-row items-center justify-center px-4 md:px-6 lg:px-8 lg:gap-x-4">
+<!-- Texto -->    <!-- Texto --><!-- Texto -->    <!-- Texto -->
+    <div class="text-center md:text-left max-w-2xl lg:max-w-xl">
+      <h1 class="text-4xl font-extrabold text-blue-900 leading-tight">
+        ¡Bienvenide a Punto Safa!
+      </h1>
+      <p class="text-lg text-gray-700 mt-4">
+        Te presentamos nuestro espacio literario, en el que encontrarás una amplia selección de libros, desde los clásicos hasta las más recientes historias. ¡Ven y descubre tu próxima gran lectura!
+      </p>
+      <button class="mt-6 px-6 py-3 bg-blue-900 text-white font-medium rounded-lg shadow-md hover:bg-gray-400 transition">
+        Sobre nosotros
+      </button>
+    </div>
+    <!-- Imagen -->
+    <div class="mt-10 md:mt-0 md:ml-6 lg:ml-0">
+      <img src="assets/logo_puntosafa.png" alt="Logo Punto Safa" class="w-full max-w-xxs md:max-w-xs mx-auto">
+    </div>
+  </div>
+</section>
