--- a/src/app/component/Inicio_componentes_propios/carousel/carousel.component.html
+++ b/src/app/component/Inicio_componentes_propios/carousel/carousel.component.html
@@ -1,13 +1,35 @@
 <section class="py-10 bg-gray-100">
-  <div class="container mx-auto">
+  <div class="container mx-auto relative">
     <h2 class="text-2xl font-bold text-center text-blue-900">
       Nuestro carrusel de libros
     </h2>
-    <div class="flex overflow-x-auto space-x-6 mt-6">
+
+    <!-- Botón para ir al anterior -->
+    <button
+      class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-blue-900 text-white p-2 rounded shadow-md z-10"
+      (click)="scrollLeft()"
+    >
+      ‹
+    </button>
+
+    <!-- Carrusel , desplazamiento automatico -->
+    <div
+      #carousel
+      class="flex overflow-hidden space-x-6 mt-6 transition-all duration-200"
+    >
       <app-book-card
         *ngFor="let book of books"
         [book]="book"
+        class="min-w-[300px] flex-shrink-0"
       ></app-book-card>
     </div>
+
+    <!-- Botón para ir al siguiente -->
+    <button
+      class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-blue-900 text-white p-2 rounded shadow-md z-10"
+      (click)="scrollRight()"
+    >
+      ›
+    </button>
   </div>
 </section>
