--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
-<router-outlet></router-outlet>
+<div class="min-h-screen flex flex-col">
+
+
+
+
+
+  <main class="flex-grow items-center">
+    <router-outlet></router-outlet>
+  </main>
+
+
+</div>
