--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,37 +1,47 @@
-<footer class="bg-gray-800 text-white py-8">
+<footer class="bg-gray-800 text-white py-2">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-  <div class="container mx-auto flex justify-between items-center">
-    <img src="/assets/logo_puntosafa.png" alt="Logo Punto Safa" class="h-20">
-    <div class="flex space-x-4">
-      <ul>
-        <li><a href="#" class="text-white hover:underline">Sobre nosotros</a></li>
-        <li><a href="#" class=" text-white  hover:underline">Contacto</a></li>
+  <div class="container mx-auto px-2">
+    <!-- Flexbox container -->
+    <div class="flex flex-wrap justify-between items-center space-y-10 md:space-y-0 md:flex-nowrap">
+      <!-- Logo -->
+      <div class="flex flex-wrap justify-between items-center space-y-4 md:space-y-0 md:flex-nowrap">
+        <img src="/assets/logo_puntosafa.png" alt="Logo Punto Safa" class="h-16">
+      </div>
 
-      </ul>
-      <ul>
-        <li><a href="#" class="text-white  hover:underline">Aviso legal</a></li>
-        <li><a href="#" class="text-white  hover:underline">Políticas de privacidad</a></li>
-        <li><a href="#" class="text-white  hover:underline">Términos de uso</a></li>
-      </ul>
-    </div>
-    <div class="text-center">
+      <!-- Enlaces -->
+      <div class="flex flex-wrap justify-center md:justify-between w-full md:w-auto space-x-2">
+        <ul class="text-center md:text-left">
+          <li><a href="#" class="text-white hover:underline">Sobre nosotros</a></li>
+          <li><a href="#" class="text-white hover:underline">Contacto</a></li>
+        </ul>
+        <ul class="text-center md:text-left">
+          <li><a href="#" class="text-white hover:underline">Aviso legal</a></li>
+          <li><a href="#" class="text-white hover:underline">Políticas de privacidad</a></li>
+          <li><a href="#" class="text-white hover:underline">Términos de uso</a></li>
+        </ul>
+      </div>
 
-      <p><strong>Suscríbete a nuestro boletín:</strong></p>
-      <p>Recibe las últimas noticias y ofertas</p>
-      <form class="mt-2">
-        <input type="text" placeholder="Tu nombre" class="p-1 rounded-md text-black">
-        <input type="email" placeholder="Tu correo" class="p-1 rounded-md text-black ml-2">
-        <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded ml-2">Suscribirse</button>
-      </form>
-    </div>
-    <div>
-      <p>Síguenos en nuestras redes:</p>
-      <div class="flex space-x-4 mt-2">
-        <a href="#" class="hover:text-gray-400"><i class="fab fa-instagram"></i></a>
-        <a href="#" class="hover:text-gray-400"><i class="fab fa-facebook"></i></a>
-        <a href="#" class="hover:text-gray-400"><i class="fab fa-twitter"></i></a>
-        <a href="#" class="hover:text-gray-400"><i class="fab fa-youtube"></i></a>
+      <!-- Suscripción -->
+      <div class="text-center w-full md:w-auto">
+        <p><strong>Suscríbete a nuestro boletín:</strong></p>
+        <p>Recibe las últimas noticias y ofertas</p>
+        <form class="mt-2 flex flex-col items-center md:flex-row">
+          <input type="text" placeholder="Tu nombre" class="p-2 rounded-md text-black mb-2 md:mb-0 md:mr-2">
+          <input type="email" placeholder="Tu correo" class="p-2 rounded-md text-black mb-2 md:mb-0 md:mr-2">
+          <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Suscribirse</button>
+        </form>
+      </div>
+
+      <!-- Redes sociales -->
+      <div class="text-center w-full md:w-auto">
+        <p>Síguenos en nuestras redes:</p>
+        <div class="flex justify-center space-x-4 mt-2">
+          <a href="#" class="hover:text-gray-400"><i class="fab fa-instagram"></i></a>
+          <a href="#" class="hover:text-gray-400"><i class="fab fa-facebook"></i></a>
+          <a href="#" class="hover:text-gray-400"><i class="fab fa-twitter"></i></a>
+          <a href="#" class="hover:text-gray-400"><i class="fab fa-youtube"></i></a>
+        </div>
       </div>
     </div>
   </div>
