--- a/src/app/component/buscador-inicio/buscador-inicio.component.html
+++ b/src/app/component/buscador-inicio/buscador-inicio.component.html
@@ -6,7 +6,7 @@
       placeholder="Buscar libro por autor o título..."
       class="border  border-gray-300 rounded-xl px-4 py-2 w-2/3 text-custom-blue "
     />
-    <button class="bg-blue-900 text-white px-6 py-2 rounded hover:bg-gray-400">
+    <button (click)="searchLibros()" class="bg-blue-900 text-white px-6 py-2 rounded hover:bg-gray-400">
       Buscar
     </button>
   </div>
