Ya funciona el carrusel. Se conecta con los libros de la bbdd. Mejorar bbdd con enlaces de fotos que funcionen.

--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,5 +1,9 @@
-<app-header></app-header>
-<app-hero-section-inicio></app-hero-section-inicio>
-<app-buscador-inicio></app-buscador-inicio>
-<app-cajas-categoria-inicio></app-cajas-categoria-inicio>
-
+<div class="home-container min-h-screen w-full overflow-y-auto flex flex-col">
+  <app-header></app-header>
+    <app-hero-section-inicio></app-hero-section-inicio>
+  <app-buscador-inicio></app-buscador-inicio>
+  <app-cajas-categoria-inicio></app-cajas-categoria-inicio>
+  <app-carousel></app-carousel>
+  <app-recomendacion-libro></app-recomendacion-libro>
+  <app-footer></app-footer>
+</div>
