--- a/src/app/component/Inicio_componentes_propios/carousel/carousel.component.html
+++ b/src/app/component/Inicio_componentes_propios/carousel/carousel.component.html
@@ -1,8 +1,6 @@
 <section class="py-10 bg-gray-100">
   <div class="container mx-auto relative">
-    <h2 class="text-2xl font-bold text-center text-blue-900">
-      Nuestro carrusel de libros
-    </h2>
+    <h2 class="text-2xl font-bold text-center text-blue-900">Nuestro carrusel de libros</h2>
 
     <!-- Botón para ir al anterior -->
     <button
@@ -12,11 +10,8 @@
       ‹
     </button>
 
-    <!-- Carrusel , desplazamiento automatico -->
-    <div
-      #carousel
-      class="flex overflow-hidden space-x-6 mt-6 transition-all duration-200"
-    >
+    <!-- Carrusel -->
+    <div #carousel class="flex overflow-hidden space-x-6 mt-6 transition-all duration-200">
       <app-book-card
         *ngFor="let book of books"
         [book]="book"
