Cambios aun en construcción porque el carrusel no se carga los libros cuando está en Home.

--- a/src/app/component/Inicio_componentes_propios/carousel/carousel.component.html
+++ b/src/app/component/Inicio_componentes_propios/carousel/carousel.component.html
@@ -10,7 +10,7 @@
       ‹
     </button>
 
-    <!-- Carrusel -->
+    <!-- Carrusel usando las tarjetas bookcard -->
     <div #carousel class="flex overflow-hidden space-x-6 mt-6 transition-all duration-200">
       <app-book-card
         *ngFor="let book of books"
