--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -13,24 +13,47 @@
       </svg>
     </button>
 
-    <!-- Menú de navegación en pantallas grandes -->
+    <!-- Menú de navegación para pantallas grandes -->
     <ul class="hidden md:flex space-x-6 text-lg md:text-white">
-      <li><a href="#" class="hover:text-gray-300">Inicio</a></li>
-      <li><a href="#" class="hover:text-gray-300">Catálogo</a></li>
-      <li>
-        <a href="#" class="bg-white text-blue-900 px-4 py-2 rounded hover:bg-gray-200">
-          Iniciar sesión o registrarse
-        </a>
-      </li>
+      <li><a href="/home" class="hover:text-gray-300">Inicio</a></li>
+      <li><a href="/catalogo" class="hover:text-gray-300">Catálogo</a></li>
+
+        <!-- Mostrar dependiendo del estado de la sesión -->
+        <li *ngIf="!isLoggedIn">
+            <a href="/login" class="bg-white text-blue-900 px-4 py-2 rounded hover:bg-gray-200">
+                Iniciar sesión o registrarse
+            </a>
+        </li>
+        <li *ngIf="isLoggedIn" class="relative group">
+            <button class="bg-white text-blue-900 px-4 py-4 rounded hover:bg-gray-200">
+                Mi Cuenta
+            </button>
+            <!-- Submenú desplegable -->
+            <ul class="absolute hidden group-hover:block bg-white text-blue-900 shadow-md rounded mt-3 w-40">
+                <li><a href="/perfil" class="block px-4 py-2 hover:bg-gray-100">Perfil</a></li>
+                <li><a href="/mis-pedidos" class="block px-4 py-2 hover:bg-gray-100">Mis Pedidos</a></li>
+                <li><button (click)="logout()" class="block w-full text-left px-4 py-2 hover:bg-red-100 text-red-600">Cerrar Sesión</button></li>
+            </ul>
+        </li>
+
     </ul>
   </nav>
 
-  <!-- Menú desplegable en móviles -->
+  <!-- Menú desplegable para móviles -->
   <div *ngIf="isMenuOpen" class="md:hidden bg-custom-blue text-white text-center py-4">
-    <a href="#" class="block py-2 hover:text-gray-300">Inicio</a>
-    <a href="#" class="block py-2 hover:text-gray-300">Catálogo</a>
-    <a href="#" class="block bg-white text-blue-900 px-4 py-2 rounded hover:bg-gray-200">
-      Iniciar sesión o registrarse
-    </a>
+    <a href="/" class="block py-2 hover:text-gray-300">Inicio</a>
+    <a href="/catalogo" class="block py-2 hover:text-gray-300">Catálogo</a>
+
+    <ng-container *ngIf="!isLoggedIn; else loggedInMenu">
+      <a href="/login" class="block bg-white text-blue-900 px-4 py-2 rounded hover:bg-gray-200">
+        Iniciar sesión o registrarse
+      </a>
+    </ng-container>
+
+    <ng-template #loggedInMenu>
+      <a href="/perfil" class="block py-2 hover:text-gray-300">Perfil</a>
+      <a href="/mis-pedidos" class="block py-2 hover:text-gray-300">Mis Pedidos</a>
+      <button (click)="logout()" class="block w-full py-2 text-red-400 hover:bg-red-100">Cerrar Sesión</button>
+    </ng-template>
   </div>
 </header>
