--- a/src/app/page/autor/autor.component.html
+++ b/src/app/page/autor/autor.component.html
@@ -1,1 +1,58 @@
-<p>autor works!</p>
+<div class="min-h-screen flex flex-col">
+  <header>
+    <app-header></app-header>
+  </header>
+
+  <!-- Main Content -->
+  <main class="flex-grow flex flex-col items-center bg-white">
+    <!-- Encabezado -->
+    <div class="w-full flex items-center bg-[#F0F4EF] p-4">
+      <img src="/assets/logo_puntosafa.png" alt="Logo Punto Safa" class="w-60 h-auto ml-60">
+      <h2 class="flex-2 text-center text-4xl font-bold text-[#1F2D3D]">Autor</h2>
+    </div>
+
+    <app-buscador-inicio></app-buscador-inicio>
+
+    <!-- Sección del Autor -->
+    <div class="w-3/4 bg-gray-100 p-6 flex rounded-lg shadow-lg mt-8">
+      <!-- Foto del autor -->
+      <div class="w-1/3 flex justify-center">
+        <img src="/assets/autor.jpg" alt="Foto del Autor" class="w-48 h-48 object-cover rounded-lg">
+      </div>
+
+      <!-- Información del autor con validación -->
+      <div class="w-2/3 flex flex-col justify-center pl-6">
+        <div *ngIf="autor; else errorTemplate">
+          <h3 class="text-3xl font-bold text-gray-800">{{ autor.nombre }} {{ autor.apellidos }}</h3>
+          <p class="text-lg text-gray-700 mt-2"><strong>Nacionalidad:</strong> {{ autor.nacionalidad }}</p>
+          <p class="text-lg text-gray-700 mt-1"><strong>Fecha de Nacimiento:</strong> {{ autor.fecha_nacimiento | date:'dd/MM/yyyy' }}</p>
+          <p class="text-lg text-gray-700 mt-3"><strong>Biografía:</strong> {{ autor.biografia }}</p>
+        </div>
+
+        <ng-template #errorTemplate>
+          <p class="text-red-500 font-semibold">Error: No se pudo cargar la información del autor.</p>
+        </ng-template>
+      </div>
+
+
+    </div>
+
+    <!-- Sección de libros del autor -->
+    <div class="w-3/4 bg-white p-6 mt-6 rounded-lg shadow-lg">
+      <h3 class="text-2xl font-bold text-gray-800">Libros de {{ autor?.nombre}}</h3>
+      <div class="grid grid-cols-1 md:grid-cols-3 gap-6 mt-4">
+        <div *ngFor="let libro of autor?.libros" class="bg-gray-200 p-4 rounded-lg shadow-md">
+          <h4 class="text-xl font-semibold">{{ libro.titulo }}</h4>
+          <p class="text-gray-700 mt-2">{{ libro.descripcion }}</p>
+        </div>
+
+      </div>
+    </div>
+
+  </main>
+
+  <!-- Footer -->
+  <footer class="bg-gray-800 text-white py-6">
+    <app-footer></app-footer>
+  </footer>
+</div>
