Me funciona filtro en cada cajetilla.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,8 @@
 <div class="min-h-screen flex flex-col">
-
-
-
-
-
-  <main class="flex-grow items-center">
+  <app-header></app-header>
+  <app-hero-section-inicio> </app-hero-section-inicio>
+  <div class="flex-grow">
     <router-outlet></router-outlet>
-  </main>
-
-
+  </div>
+  <app-footer class="mt-auto"></app-footer>
 </div>
