--- a/src/app/component/Inicio_componentes_propios/book-list/book-list.component.html
+++ b/src/app/component/Inicio_componentes_propios/book-list/book-list.component.html
@@ -1,6 +1,13 @@
-<div *ngIf="loading" class="text-center">Cargando libros...</div>
-<div *ngIf="errorMessage" class="text-red-500">{{ errorMessage }}</div>
+<div *ngIf="loading" class="text-center text-blue-600">Cargando libros...</div>
 
-<div *ngIf="books.length > 0" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
-  <app-book-card *ngFor="let book of books" [book]="book"></app-book-card>
+<div *ngIf="errorMessage" class="text-center text-red-600">{{ errorMessage }}</div>
+
+<div *ngIf="books.length > 0; else noBooks">
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+    <app-book-card *ngFor="let book of books" [book]="book"></app-book-card>
+  </div>
 </div>
+
+<ng-template #noBooks>
+  <p class="text-gray-500 text-center">ALBA No hay libros disponibles en esta categoría.</p>
+</ng-template>
