--- a/src/app/page/home/home.component.html
+++ b/src/app/page/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="home-container min-h-screen w-full overflow-y-auto flex flex-col">
+<div class="height: 100vh; overflow: auto;">
   <app-header></app-header>
   <app-hero-section-inicio></app-hero-section-inicio>
   <app-buscador-inicio></app-buscador-inicio>
