--- a/src/app/component/Inicio_componentes_propios/cajas-categoria-inicio/cajas-categoria-inicio.component.html
+++ b/src/app/component/Inicio_componentes_propios/cajas-categoria-inicio/cajas-categoria-inicio.component.html
@@ -1,45 +1,20 @@
 <section class="py-2">
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-  />
-
   <div class="container mx-auto">
     <!-- Título de la sección -->
     <h2 class="text-xl font-bold text-center text-blue-900 mb-4">Categorías</h2>
 
-    <!-- Contenedor para las categorías -->
+    <!-- Contenedor de Categorías -->
     <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
       <!-- Ficción -->
       <div class="bg-blue-50 p-3 rounded shadow-sm">
         <h3 class="text-lg font-bold text-blue-800 text-center">Ficción</h3>
-        <ul class="space-y-3 mt-3">
-          <li>
-            <!-- Componente BookCard para Ficción -->
-            <app-book-card category="fiction"></app-book-card>
-          </li>
-          <button
-            class="mt-2 px-3 py-1 bg-blue-900 text-white rounded hover:bg-blue-700 text-sm mx-auto block"
-          >
-            Abrir
-          </button>
-        </ul>
+        <app-book-list [categoryId]="1"></app-book-list> <!-- Ficción (ID 1) -->
       </div>
 
       <!-- No Ficción -->
       <div class="bg-blue-50 p-3 rounded shadow-sm">
         <h3 class="text-lg font-bold text-blue-800 text-center">No Ficción</h3>
-        <ul class="space-y-3 mt-3">
-          <li>
-            <!-- Componente BookCard para No Ficción -->
-            <app-book-card category="nonFiction"></app-book-card>
-          </li>
-          <button
-            class="mt-2 px-3 py-1 bg-blue-900 text-white rounded hover:bg-blue-700 text-sm mx-auto block"
-          >
-            Abrir
-          </button>
-        </ul>
+        <app-book-list [categoryId]="2"></app-book-list> <!-- No Ficción (ID 2) -->
       </div>
     </div>
   </div>
