Listar libros catalogo

--- a/src/app/page/catalogo/catalogo.component.html
+++ b/src/app/page/catalogo/catalogo.component.html
@@ -1,21 +1,21 @@
-<section class="bg-customGreen py-2 md:py-4 shadow-gray-500 shadow-sm">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+<!--<section class="bg-customGreen py-2 md:py-4 shadow-gray-500 shadow-sm">-->
+<!--  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">-->
 
-  <div class="container mx-auto flex flex-col md:flex-row items-center
-   px-4 md:px-6 lg:px-8 lg:gap-x-4 justify-between">
+<!--  <div class="container mx-auto flex flex-col md:flex-row items-center-->
+<!--   px-4 md:px-6 lg:px-8 lg:gap-x-4 justify-between">-->
 
-    <div class="mt-10 md:mt-0 md:ml-0 lg:ml-0">
-      <img src="../../../../assets/logo_puntosafa.png" alt="Logo Punto Safa" class="w-full max-w-xxs md:max-w-xs mx-auto">
-    </div>
+<!--    <div class="mt-10 md:mt-0 md:ml-0 lg:ml-0">-->
+<!--      <img src="../../../../assets/logo_puntosafa.png" alt="Logo Punto Safa" class="w-full max-w-xxs md:max-w-xs mx-auto">-->
+<!--    </div>-->
 
-    <!-- Dynamic Text Content (passed from parent) -->
-    <div class="flex items-center justify-center text-center md:text-left max-w-2xl lg:max-w-xl mx-auto">
-      <h1 class="text-4xl font-extrabold text-blue-900 leading-tight">
-        Catálogo
-      </h1>
-    </div>
-  </div>
-</section>
+<!--    &lt;!&ndash; Dynamic Text Content (passed from parent) &ndash;&gt;-->
+<!--    <div class="flex items-center justify-center text-center md:text-left max-w-2xl lg:max-w-xl mx-auto">-->
+<!--      <h1 class="text-4xl font-extrabold text-blue-900 leading-tight">-->
+<!--        Catálogo-->
+<!--      </h1>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</section>-->
 
 <section class="bg-white py-4">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
