--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
-<div class="min-h-screen flex flex-col">
+<div class="h-screen overflow-auto">
   <app-header></app-header>
   <app-hero-section-inicio> </app-hero-section-inicio>
   <div class="flex-grow">
-    <router-outlet></router-outlet>
+    <app-cajas-categoria-inicio>  </app-cajas-categoria-inicio>
+    <app-carousel>  </app-carousel>
+
   </div>
   <app-footer class="mt-auto"></app-footer>
 </div>
