--- a/src/app/component/Inicio_componentes_propios/carousel/carousel.component.html
+++ b/src/app/component/Inicio_componentes_propios/carousel/carousel.component.html
@@ -1,4 +1,4 @@
-<section class="py-10 bg-gray-100">
+<section class="py-10 bg-customAzulito ">
   <div class="container mx-auto relative">
     <h2 class="text-2xl font-bold text-center text-blue-900">Nuestro carrusel de libros</h2>
 
