Arreglado las tarjetas. Añadido Caja recomendacion-libro.component.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
 <div class="h-screen overflow-auto">
   <app-header></app-header>
-  <app-hero-section-inicio> </app-hero-section-inicio>
-  <div class="flex-grow">
-    <app-cajas-categoria-inicio>  </app-cajas-categoria-inicio>
-    <app-carousel>  </app-carousel>
 
-  </div>
+<router-outlet ></router-outlet>
+
   <app-footer class="mt-auto"></app-footer>
 </div>
