--- a/src/app/component/Inicio_componentes_propios/recomendacion-libro/recomendacion-libro.component.css
+++ b/src/app/component/Inicio_componentes_propios/recomendacion-libro/recomendacion-libro.component.css
@@ -1,6 +1,6 @@
-/* recommendation.component.css */
-section img {
-  border: 2px solid white;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+.line-clamp-3 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
