--- a/src/app/component/Inicio_componentes_propios/cajas-categoria-inicio/cajas-categoria-inicio.component.html
+++ b/src/app/component/Inicio_componentes_propios/cajas-categoria-inicio/cajas-categoria-inicio.component.html
@@ -1,4 +1,4 @@
-<section class="py-2 bg-customAzulito">
+<section class="py-2 bg-customBlanco">
   <div class="container mx-auto">
     <!-- Título de la sección -->
     <h2 class="text-xl font-bold text-center text-blue-900 mb-4">CATEGORÍAS</h2>
