--- a/src/app/component/Inicio_componentes_propios/carousel/carousel.component.html
+++ b/src/app/component/Inicio_componentes_propios/carousel/carousel.component.html
@@ -1,6 +1,6 @@
 <section class="py-10 bg-customAzulito ">
   <div class="container mx-auto relative">
-    <h2 class="text-2xl font-bold text-center text-blue-900">Nuestro carrusel de libros</h2>
+    <h2 class="text-2xl font-bold text-center text-blue-900">EXPLORA NUESTROS LIBROS</h2>
 
     <!-- Botón para ir al anterior -->
     <button
