Muestra y oculta carrito

--- a/src/app/page/catalogo/catalogo.component.html
+++ b/src/app/page/catalogo/catalogo.component.html
@@ -1,3 +1,9 @@
+<div class="cart-icon-container" (click)="toggleCart()">
+  <svg class="icon-cart" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+    <path d="M240-80q-33 0-56.5-23.5T160-160v-480q0-33 23.5-56.5T240-720h80q0-66 47-113t113-47q66 0 113 47t47 113h80q33 0 56.5 23.5T800-640v480q0 33-23.5 56.5T720-80H240Zm0-80h480v-480h-80v80q0 17-11.5 28.5T600-520q-17 0-28.5-11.5T560-560v-80H400v80q0 17-11.5 28.5T360-520q-17 0-28.5-11.5T320-560v-80h-80v480Zm160-560h160q0-33-23.5-56.5T480-800q-33 0-56.5 23.5T400-720ZM240-160v-480 480Z"/>
+  </svg>
+  <span class="cantidad">0</span>
+</div>
 <section class="bg-customGreen py-2 md:py-4 shadow-gray-500 shadow-sm" xmlns="http://www.w3.org/1999/html">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 
@@ -83,16 +89,42 @@
     <!-- Iteramos los libros -->
     <div
       *ngFor="let libro of filteredBooks"
-      class="bg-white rounded-lg shadow-lg p-4 flex flex-col items-center"
+      class="bg-white rounded-lg shadow-lg p-4 flex flex-col items-center "
     >
+      <div class="image-container">
       <img [src]="libro.imagen" [alt]="libro.titulo" class="w-40 h-60 object-cover rounded" />
+      <div class="overlay">
+        <button class="cart-btn">
+          <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#5f6368">
+            <path d="M280-80q-33 0-56.5-23.5T200-160q0-33 23.5-56.5T280-240q33 0 56.5 23.5T360-160q0 33-23.5 56.5T280-80Zm400 0q-33 0-56.5-23.5T600-160q0-33 23.5-56.5T680-240q33 0 56.5 23.5T760-160q0 33-23.5 56.5T680-80ZM246-720l96 200h280l110-200H246Zm-38-80h590q23 0 35 20.5t1 41.5L692-482q-11 20-29.5 31T622-440H324l-44 80h480v80H280q-45 0-68-39.5t-2-78.5l54-98-144-304H40v-80h130l38 80Zm134 280h280-280Z"/>
+          </svg>
+          Añadir al carrito
+        </button>
+      </div>
+      </div>
       <h3 class="mt-4 text-lg font-bold text-gray-800 text-center">{{ libro.titulo }}</h3>
       <p class="text-sm text-gray-600 text-center">por {{ libro.autor }}</p>
       <p class="mt-2 text-xl font-semibold text-blue-900">{{ libro.precio | currency: 'EUR' }}</p>
+      <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#ff9c1a"><path d="m354-287 126-76 126 77-33-144 111-96-146-13-58-136-58 135-146 13 111 97-33 143ZM233-120l65-281L80-590l288-25 112-265 112 265 288 25-218 189 65 281-247-149-247 149Zm247-350Z"/></svg>'
       <button class="mt-4 px-4 py-2 bg-blue-900 text-white rounded hover:bg-blue-700">Ver detalles</button>
     </div>
   </div>
 </div>
+
+<div class="cart" *ngIf="showCart">
+  <h2 class="text-xl font-bold mb-4">Cart</h2>
+  <ul class="cart-items border-b">
+    <li>
+      <p class="cart-image">Imagen</p>
+      <p class="cart-item">Producto</p>
+
+    </li>
+  </ul>
+  <p class="mt-4 text-right font-bold text-lg">Total</p>
+  <button (click)="toggleCart()">Hide Cart</button>
+</div>
+
+
 
 
 
