Color en catalogo.component.html

--- a/src/app/page/catalogo/catalogo.component.html
+++ b/src/app/page/catalogo/catalogo.component.html
@@ -52,7 +52,7 @@
 
 
 
-<div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4 p-4">
+<div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4 p-4 bg-customGreen">
   <!-- Filtro Catalogo -->
   <div class="flex-shrink-0">
        <!-- Filtros -->
