Cambios en el carrusel para que se mueva de forma automática. Aun pendiente de verificar.

--- a/src/app/component/Inicio_componentes_propios/cajas-categoria-inicio/cajas-categoria-inicio.component.html
+++ b/src/app/component/Inicio_componentes_propios/cajas-categoria-inicio/cajas-categoria-inicio.component.html
@@ -9,6 +9,9 @@
       <div class="bg-blue-50 p-3 rounded shadow-sm">
         <h3 class="text-lg font-bold text-blue-800 text-center">FICCIÓN</h3>
         <app-book-list [categoryId]="1"></app-book-list> <!-- Ficción (ID 1) -->
+        <div class="flex justify-center mt-6">
+          <button class="px-6 py-3 bg-blue-900 text-white font-medium rounded-lg hover:bg-gray-400 transition shadow-lg">Abrir</button>
+        </div>
 
       </div>
 
@@ -16,6 +19,9 @@
       <div class="bg-blue-50 p-3 rounded shadow-sm">
         <h3 class="text-lg font-bold text-blue-800 text-center">NO FICCIÓN</h3>
         <app-book-list [categoryId]="2"></app-book-list> <!-- No Ficción (ID 2) -->
+        <div class="flex justify-center mt-6">
+          <button class="px-6 py-3 bg-blue-900 text-white font-medium rounded-lg hover:bg-gray-400 transition shadow-lg">Abrir</button>
+        </div>
       </div>
     </div>
   </div>
