--- a/src/app/component/hero-seccciones/hero-seccciones.component.html
+++ b/src/app/component/hero-seccciones/hero-seccciones.component.html
@@ -27,7 +27,7 @@
    px-4 md:px-6 lg:px-8 lg:gap-x-4 justify-between">
 
     <div class="mt-10 md:mt-0 md:ml-0 lg:ml-0">
-      <img src="../../../../assets/logo_puntosafa.png" alt="Logo Punto Safa" class="w-full max-w-xxs md:max-w-xs mx-auto">
+      <img src="../../../assets/logo_puntosafa.png" alt="Logo Punto Safa" class="w-full max-w-xxs md:max-w-xs mx-auto">
     </div>
 
     <!-- Dynamic Text Content (passed from parent) -->
