--- a/src/app/page/catalogo/catalogo.component.html
+++ b/src/app/page/catalogo/catalogo.component.html
@@ -49,9 +49,6 @@
 </section>
 
 
-
-
-
 <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4 p-4 bg-customGreen">
   <!-- Filtro Catalogo -->
   <div class="flex-shrink-0">
@@ -85,8 +82,10 @@
   </div>
 
   <!-- Book List -->
-  <div class="flex-grow grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 p-4">
-    <!-- Iteramos los libros -->
+  <div class="flex-grow grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 p-4 bg-gray-800">
+    <div *ngIf="!libros || libros.length === 0" class="loading">
+      <p>Cargando libros...</p>
+    </div>
     <div
       *ngFor="let libro of filteredBooks"
       class="bg-white rounded-lg shadow-lg p-4 flex flex-col items-center "
@@ -111,6 +110,66 @@
   </div>
 </div>
 
+<div class="flex items-center justify-between border-t border-gray-200 bg-customAzulito px-4 py-3 sm:px-6">
+  <div class="flex flex-1 justify-between sm:hidden">
+    <a href="#" class="relative inline-flex items-center rounded-md border border-gray-300 bg-red-700
+     px-4 py-2 text-sm font-medium text-gray-700 hover:bg-gray-50">
+      Anterior</a>
+    <a href="#" class="relative ml-3 inline-flex items-center rounded-md border border-gray-300 bg-yellow-500 px-4 py-2 text-sm font-medium text-gray-700 hover:bg-gray-50">
+      Siguiente</a>
+  </div>
+  <div class="hidden sm:flex sm:flex-1 sm:items-center sm:justify-between">
+    <div>
+      <p class="text-sm text-gray-700">
+        Showing
+        <span class="font-medium">1</span>
+        to
+        <span class="font-medium">10</span>
+        of
+        <span class="font-medium">97</span>
+        results
+      </p>
+    </div>
+    <div>
+      <nav class="isolate inline-flex -space-x-px rounded-md shadow-xs" aria-label="Pagination">
+        <button (click)="cambiarPagina(-1)" [disabled]="currentPage === 1"
+        class="relative inline-flex items-center rounded-l-md px-2 py-2 text-gray-400 ring-1 ring-gray-300
+ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0 bg-violet-800">
+
+          <span class="sr-only">Anterior</span>
+          <svg class="size-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" data-slot="icon">
+            <path fill-rule="evenodd" d="M11.78 5.22a.75.75 0 0 1 0 1.06L8.06 10l3.72 3.72a.75.75 0 1 1-1.06 1.06l-4.25-4.25a.75.75 0 0 1 0-1.06l4.25-4.25a.75.75 0 0 1 1.06 0Z"
+                  clip-rule="evenodd" />
+          </svg>
+        </button>
+        <!-- Current: "z-10 bg-indigo-600 text-white focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600", Default: "text-gray-900 ring-1 ring-inset ring-gray-300 hover:bg-gray-50 focus:outline-offset-0" -->
+        <a href="#" aria-current="page" class="relative z-10 inline-flex items-center bg-indigo-600 px-4 py-2 text-sm font-semibold text-white focus:z-20 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">1</a>
+        <a href="#" class="relative inline-flex items-center px-4 py-2 text-sm font-semibold text-gray-900 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0">
+          2</a>
+        <a href="#" class="relative hidden items-center px-4 py-2 text-sm font-semibold text-gray-900 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0 md:inline-flex">
+          3</a>
+        <span class="relative inline-flex items-center px-4 py-2 text-sm  bg-green-800
+        font-semibold text-gray-700 ring-1 ring-gray-300 ring-inset focus:outline-offset-0">...</span>
+        <a href="#" class="relative hidden items-center px-4 py-2 text-sm
+        font-semibold text-gray-900 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0 md:inline-flex">
+          8</a>
+        <a href="#" class="relative inline-flex items-center px-4 py-2 text-sm font-semibold text-gray-900 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0">
+          9</a>
+        <a href="#" class="relative inline-flex items-center px-4 py-2 text-sm font-semibold text-gray-900 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0">
+          10</a>
+      <button (click)="cambiarPagina(1)" class="bg-fuchsia-800 relative inline-flex items-center rounded-r-md px-2 py-2 text-gray-400 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0">
+          <span class="sr-only">Siguiente</span>
+          <svg class="size-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" data-slot="icon">
+            <path fill-rule="evenodd" d="M8.22 5.22a.75.75 0 0 1 1.06 0l4.25 4.25a.75.75 0 0 1 0 1.06l-4.25 4.25a.75.75 0 0 1-1.06-1.06L11.94 10 8.22 6.28a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd" />
+          </svg>
+      </button>
+      </nav>
+    </div>
+  </div>
+</div>
+
+
+
 <div class="cart" *ngIf="showCart">
   <h2 class="text-xl font-bold mb-4">Cart</h2>
   <ul class="cart-items border-b">
@@ -123,6 +182,8 @@
   <p class="mt-4 text-right font-bold text-lg">Total</p>
   <button (click)="toggleCart()">Hide Cart</button>
 </div>
+
+
 
 
 
