--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="h-screen overflow-auto">
 <app-header></app-header>
 <router-outlet></router-outlet>
-<app-footer></app-footer>
+<app-footer class="mt-auto"></app-footer>
 </div>
