--- a/src/app/page/catalogo/catalogo.component.html
+++ b/src/app/page/catalogo/catalogo.component.html
@@ -48,6 +48,17 @@
   </div>
 </section>
 
+<div class="flex items-center space-x-2 mx-60 my-10 px-20">
+  <span class="font-bold text-[20px] text-[#1D2C4B] font-montserrat">Ordenar por</span>
+  <select  class="p-2 border border-gray-300 rounded-md">
+    <option value="autor">Autor</option>
+    <option value="titulo" selected>Libro</option>
+    <option value="fecha">Fecha edición</option>
+    <option value="precio">Precio</option>
+  </select>
+</div>
+
+
 
 <div class="flex flex-col md:flex-row space-y-4 md:space-y-0 md:space-x-4 p-4 bg-customGreen">
   <!-- Filtro Catalogo -->
@@ -56,7 +67,7 @@
     <div class="bg-[#1D2C4B] max-w-[333px] max-h-[65px] text-center rounded-lg text-white">
       <h1 class="text-2xl font-bold">Filtros</h1>
     </div>
-    <div class="max-w-[333px] p-4 space-y-4">
+    <div class="border-b border-gray-200 py-6">
       <!-- Precios -->
       <div>
         <h3 class="text-[#1D2C4B] text-[20px] font-semibold">Precios</h3>
@@ -70,6 +81,7 @@
       </div>
 
       <!-- Categoría -->
+      <div class="max-w-[333px] p-4 space-y-4 mt-4 border-t border-custom-blue">
       <div>
         <h3 class="text-[#1D2C4B] text-[20px] font-semibold">Categoría</h3>
         <ul class="flex flex-col space-y-2 text-[#1D2C4B] font-bold text-md font-[Montserrat]">
@@ -80,6 +92,7 @@
       </div>
     </div>
   </div>
+  </div>
 
   <!-- Book List -->
   <div class="flex-grow grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 p-4 bg-gray-800">
@@ -88,7 +101,7 @@
     </div>
     <div
       *ngFor="let libro of filteredBooks"
-      class="bg-white rounded-lg shadow-lg p-4 flex flex-col items-center "
+      class="bg-white rounded-lg shadow-lg p-4  flex flex-col items-center "
     >
       <div class="image-container">
       <img [src]="libro.imagen" [alt]="libro.titulo" class="w-40 h-60 object-cover rounded" />
@@ -143,20 +156,20 @@ ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0 bg-violet-800">
           </svg>
         </button>
         <!-- Current: "z-10 bg-indigo-600 text-white focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600", Default: "text-gray-900 ring-1 ring-inset ring-gray-300 hover:bg-gray-50 focus:outline-offset-0" -->
-        <a href="#" aria-current="page" class="relative z-10 inline-flex items-center bg-indigo-600 px-4 py-2 text-sm font-semibold text-white focus:z-20 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">1</a>
-        <a href="#" class="relative inline-flex items-center px-4 py-2 text-sm font-semibold text-gray-900 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0">
-          2</a>
-        <a href="#" class="relative hidden items-center px-4 py-2 text-sm font-semibold text-gray-900 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0 md:inline-flex">
-          3</a>
-        <span class="relative inline-flex items-center px-4 py-2 text-sm  bg-green-800
-        font-semibold text-gray-700 ring-1 ring-gray-300 ring-inset focus:outline-offset-0">...</span>
-        <a href="#" class="relative hidden items-center px-4 py-2 text-sm
-        font-semibold text-gray-900 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0 md:inline-flex">
-          8</a>
-        <a href="#" class="relative inline-flex items-center px-4 py-2 text-sm font-semibold text-gray-900 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0">
-          9</a>
-        <a href="#" class="relative inline-flex items-center px-4 py-2 text-sm font-semibold text-gray-900 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0">
-          10</a>
+<!--        <a href="#" aria-current="page" class="relative z-10 inline-flex items-center bg-indigo-600 px-4 py-2 text-sm font-semibold text-white focus:z-20 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">1</a>-->
+<!--        <a href="#" class="relative inline-flex items-center px-4 py-2 text-sm font-semibold text-gray-900 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0">-->
+<!--          2</a>-->
+<!--        <a href="#" class="relative hidden items-center px-4 py-2 text-sm font-semibold text-gray-900 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0 md:inline-flex">-->
+<!--          3</a>-->
+<!--        <span class="relative inline-flex items-center px-4 py-2 text-sm  bg-green-800-->
+<!--        font-semibold text-gray-700 ring-1 ring-gray-300 ring-inset focus:outline-offset-0">...</span>-->
+<!--        <a href="#" class="relative hidden items-center px-4 py-2 text-sm-->
+<!--        font-semibold text-gray-900 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0 md:inline-flex">-->
+<!--          8</a>-->
+<!--        <a href="#" class="relative inline-flex items-center px-4 py-2 text-sm font-semibold text-gray-900 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0">-->
+<!--          9</a>-->
+<!--        <a href="#" class="relative inline-flex items-center px-4 py-2 text-sm font-semibold text-gray-900 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0">-->
+<!--          10</a>-->
       <button (click)="cambiarPagina(1)" class="bg-fuchsia-800 relative inline-flex items-center rounded-r-md px-2 py-2 text-gray-400 ring-1 ring-gray-300 ring-inset hover:bg-gray-50 focus:z-20 focus:outline-offset-0">
           <span class="sr-only">Siguiente</span>
           <svg class="size-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true" data-slot="icon">
